@@ -144,6 +144,9 @@ RELEASE 0.95 - XXX
   - Fix TestCmd.py, runtest.py and specific tests to accomodate being
     run from directories whose paths include white space.
 
+  - Provide a more useful error message if a construction variable
+    expansion contains a syntax error during evaluation.
+
   From Vincent Risi:
 
   - Add support for the bcc32, ilink32 and tlib Borland tools.
